--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "0.6.4",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.0.0",
+    "wagmi": "^1.3.12",
+    "viem": "^1.14.3",
     "ethers": "^6.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "viem": "^1.14.3",
-    "wagmi": "^1.3.12"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
