--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.0.0",
-    "wagmi": "^1.3.12",
-    "viem": "^1.14.3",
     "ethers": "^6.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^2.0.15",
+    "wagmi": "^1.3.12"
   },
   "devDependencies": {
-    "vite": "^4.4.9",
-    "@vitejs/plugin-react": "^4.0.0"
-  }
-}
+    "vite"
