--- a/package.json
+++ b/package.json
@@ -16,4 +16,7 @@
     "wagmi": "^1.3.12"
   },
   "devDependencies": {
-    "vite"
+    "vite": "^4.4.9",
+    "@vitejs/plugin-react": "^4.0.0"
+  }
+}
