--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^2.0.15",
-    "wagmi": "^1.3.12"
+    "wagmi": "^2.9.10"
   },
   "devDependencies": {
-    "vite": "^4.4.9",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.4.9"
   }
 }
