--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@tanstack/react-query": "^5.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "viem": "^1.21.4",
-    "wagmi": "^1.4.13",
+    "viem": "^2.31.7",
+    "wagmi": "^2.15.6",
     "vite": "^4.5.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.3"
   }
 }
