--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@rainbow-me/rainbowkit": "^2.2.8"
     "@tanstack/react-query": "^5.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "viem": "^2.31.7",
-    "wagmi": "^2.15.6",
+    "wagmi": "^2.9.0",
+    "viem": "^2.3.0",
     "vite": "^4.5.0"
   },
   "devDependencies": {
