--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.2.8"
+    "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
